fix disabled font color in day and month is hard to seen

--- a/src/plugins/monthSelect/style.css
+++ b/src/plugins/monthSelect/style.css
@@ -19,6 +19,17 @@
   border-radius: 10px;
 }
 
+.flatpickr-monthSelect-months .flatpickr-day.flatpickr-disabled:before {
+  /* content: '';
+  left: 50%;
+  transform: translateX(-50%);
+  top: 50%;
+  position: absolute;
+  width: 30%;
+  text-decoration: line-through;
+  border-top: 0.5px solid rgba(255,255,255,0.5); */
+}
+
 .flatpickr-monthSelect-month {
   background: none;
   border: 1px solid transparent;
